# cli-football-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  help_build.sh  help_run.sh
res/: bengals.json  bills.json  broncos.json  chiefs.json  colts.json  dolphins.json  jaguars.json  jets.json  packers.json  ravens.json  steelers.json  texans.json  titans.json
res/afc/: bills.json  browns.json  chargers.json  patriots.json  raiders.json
src/: CMakeLists.txt  main.cpp
src/engines/rand/: MTUniformRandom.hpp
src/io-tools/: FileValidator.h  ProgressBar.cpp  ProgressBar.hpp
src/roster/: DefaultTeam.cpp  DefaultTeam.hpp  LeagueResourceLoader.cpp  LeagueResourceLoader.hpp  PlayerSpecs.cpp  PlayerSpecs.hpp
